@@ -1,3 +1,7 @@
+Version:
+- Changed the reset test so that it doesn't create output with inconsistent
+	line endings in the case of a dos mailbox.
+
 Version 1.4005: Thu Aug 24 2006
 - Fixed a bug where emails with a line near the end that start with "From "
 	would cause the Grep implementation to go into an infinite loop. (Thanks to
